<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.com.hw4.DisplayActivity">

    <RelativeLayout
        android:id="@+id/relLayoutDisplay"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginLeft="10dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textViewDHdr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expenses_lbl"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/textViewDName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewDHdr"
            android:text="@string/name_lbl"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/textViewDCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewDName"
            android:layout_marginTop="25dp"
            android:text="@string/cost_lbl"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/textViewDDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewDCost"
            android:layout_marginTop="33dp"
            android:text="@string/date_lbl"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/textViewDReceipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewDDate"
            android:layout_marginTop="60dp"
            android:text="@string/receipt"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/textViewDNameVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_alignBaseline="@+id/textViewDName"
            android:layout_alignBottom="@+id/textViewDName"
            android:layout_toRightOf="@+id/textViewDReceipt"
            android:layout_toEndOf="@+id/textViewDReceipt"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp" />

        <TextView
            android:id="@+id/textViewDCostVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_alignBaseline="@+id/textViewDCost"
            android:layout_alignBottom="@+id/textViewDCost"
            android:layout_alignLeft="@+id/textViewDNameVal"
            android:layout_alignStart="@+id/textViewDNameVal" />

        <TextView
            android:id="@+id/textViewDDateVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_above="@+id/textViewDReceipt"
            android:layout_alignLeft="@+id/textViewDCostVal"
            android:layout_alignStart="@+id/textViewDCostVal" />

        <ImageView
            android:id="@+id/imageViewDReceipt"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/border"
            android:layout_alignTop="@+id/textViewDReceipt"
            android:layout_alignLeft="@+id/textViewDDateVal"
            android:layout_alignStart="@+id/textViewDDateVal" />

        <Button
            android:id="@+id/buttonDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textSize="16dp"
            android:layout_below="@+id/imageViewDReceipt"
            android:layout_alignRight="@+id/imageViewDReceipt"
            android:layout_alignEnd="@+id/imageViewDReceipt"
            android:layout_marginRight="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="32dp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
